Completed the Chakram Weapon Capability

--- a/src/main/resources/assets/trick_weapons/lang/en_us.json
+++ b/src/main/resources/assets/trick_weapons/lang/en_us.json
@@ -2,5 +2,7 @@
 	"item.trick_weapons.iron_chakram_placeholder": "Placeholder Chakram",
 	"item.trick_weapons.placeholder_rapier": "Placeholder Rapier",
 	"skill.trick_weapons.precision_vertical": "Precision Vertical",
-	"skill.trick_weapons.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you."
+	"skill.trick_weapons.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you.",
+	"skill.trick_weapons.spinning_whirlwind": "Spinning Whirlwind",
+	"skill.trick_weapons.spinning_whirlwind.tooltip": "Throw your chakrams in an orbit around you, knocking down targets"
 }
