--- a/src/main/resources/assets/trick_weapons/lang/en_us.json
+++ b/src/main/resources/assets/trick_weapons/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-	"item.trick_weapons.iron_chakram_placeholder": "Placeholder Chakram",
+	"item.trick_weapons.placeholder_chakram": "Placeholder Chakram",
 	"item.trick_weapons.placeholder_rapier": "Placeholder Rapier",
 	"skill.trick_weapons.precision_vertical": "Precision Vertical",
 	"skill.trick_weapons.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you."
