--- a/src/main/resources/assets/trick_weapons/lang/en_us.json
+++ b/src/main/resources/assets/trick_weapons/lang/en_us.json
@@ -2,5 +2,7 @@
 	"item.trick_weapons.placeholder_chakram": "Placeholder Chakram",
 	"item.trick_weapons.placeholder_rapier": "Placeholder Rapier",
 	"skill.trick_weapons.precision_vertical": "Precision Vertical",
-	"skill.trick_weapons.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you."
+	"skill.trick_weapons.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you.",
+	"skill.trick_weapons.quick_riposte": "Quick Riposte",
+	"skill.trick_weapons.quick_riposte.tooltip": "Using a burst of speed to go behind an opponent before lunging at them with the blade."
 }
