Fixed bug where skill slots won't register and can sometimes crash.

--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -6,5 +6,6 @@
 	"skill.epic_fight_battle_styles.imperatrice_luminelle": "Imperatrice Luminelle",
 	"skill.epic_fight_battle_styles.imperatrice_luminelle.tooltip": "The legendary battle style of the Eternal Emberlight Empress. Uses primarily swords and sets opponents on fire.\n\n\"Hey, learning House Flaron's sword style is a massive responsibility! Good luck!\"",
 	"skill.epic_fight_battle_styles.precision_vertical": "Precision Vertical",
-	"skill.epic_fight_battle_styles.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you."
+	"skill.epic_fight_battle_styles.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you.",
+	"skill.epic_fight_battle_styles.duelist": "Duelist"
 }
