--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -1,10 +1,12 @@
 {
 
 	"item.epic_fight_battle_styles.placeholder_chakram": "Placeholder Chakram",
+	"item.epic_fight_battle_styles.origin_excalibur": "Origin Excalibur",
+	"item.epic_fight_battle_styles.origin_excalibur.tooltip": "This relic was once wielded by one of the 10 legendary heroes. It is said that all Excaliburs are based off this original template.",
 	"skill.epic_fight_battle_styles.hero": "Hero",
 	"skill.epic_fight_battle_styles.hero.tooltip": "The one with the sword and shield, increased attack speed with swords and axes. Reduced attack speed with everything else.",
-	"skill.epic_fight_battle_styles.imperatrice_luminelle": "Imperatrice Luminelle",
-	"skill.epic_fight_battle_styles.imperatrice_luminelle.tooltip": "The legendary battle style of the Eternal Emberlight Empress. Uses primarily swords and sets opponents on fire.\n\n\"Hey, learning House Flaron's sword style is a massive responsibility! Good luck!\"",
+	"skill.epic_fight_battle_styles.imperatrice_lumiere": "Impératrice Lumiére",
+	"skill.epic_fight_battle_styles.imperatrice_lumiere.tooltip": "The legendary battle style of the Eternal Emberlight Empress. Uses primarily swords.\n\n\"Hey, learning House Flaron's sword style is a massive responsibility! Good luck!\"",
 	"skill.epic_fight_battle_styles.precision_vertical": "Precision Vertical",
 	"skill.epic_fight_battle_styles.precision_vertical.tooltip": "Throw your chakram forward with devastating range in a precise area in front of you.",
 	"skill.epic_fight_battle_styles.duelist": "Duelist",
