--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-
+	"skill.epicfight.combat_art.category": "Combat Art",
 	"item.epic_fight_battle_styles.placeholder_chakram": "Placeholder Chakram",
 	"item.epic_fight_battle_styles.origin_excalibur": "Origin Excalibur",
 	"item.epic_fight_battle_styles.origin_excalibur.tooltip": "This relic was once wielded by one of the 10 legendary heroes. It is said that all Excaliburs are based off this original template.",
@@ -17,5 +17,15 @@
 	"skill.epic_fight_battle_styles.demon": "Demon",
 	"skill.epic_fight_battle_styles.demon.tooltip": "A wielder of the demonic blade Satsujin. Increases attack speed but reduces health and defense.",
 	"skill.epic_fight_battle_styles.atlantean": "Atlantean",
-	"skill.epic_fight_battle_styles.atlantean.tooltip": "The hero of the deep sea imparts knowledge of the attacks that is exclusive to the obsidian blade Herrscher and the nautilus shield Gesetz"
+	"skill.epic_fight_battle_styles.atlantean.tooltip": "The hero of the deep sea imparts knowledge of the attacks that is exclusive to the obsidian blade Herrscher and the nautilus shield Gesetz",
+	"key.category.epic_fight_battle_styles.efbs_skills": "Epic Fight Battle Styles",
+	"skill.epic_fight_battle_styles.slamming_hero_art": "Slamming Hero",
+	"key.epic_fight_battle_styles.combat_art_1_use": "Use Combat Art 1",
+	"key.epic_fight_battle_styles.combat_art_2_use": "Use Combat Art 2",
+
+	"skill.epicfight.battle_style.category": "Battle Style",
+	"epicfight.skill_slot.battle_style": "Battle Style",
+	"epicfight.skill_slot.combat_art_1": "Combat Art 1",
+	"epicfight.skill_slot.combat_art_2": "Combat Art 2",
+	"epicfight.skill_slot.ultimate_art": "Ultimate Art"
 }
