--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -18,6 +18,9 @@
 	"skill.epic_fight_battle_styles.demon.tooltip": "A wielder of the demonic blade Satsujin. Increases attack speed but reduces health and defense.",
 	"skill.epic_fight_battle_styles.atlantean": "Atlantean",
 	"skill.epic_fight_battle_styles.atlantean.tooltip": "The hero of the deep sea imparts knowledge of the attacks that is exclusive to the obsidian blade Herrscher and the nautilus shield Gesetz",
+	"skill.epic_fight_battle_styles.blaze_stinger": "Blaze Stinger",
+	"skill.epic_fight_battle_styles.blaze_stinger.tooltip": "Thrust the sword at a speed so incredible not only it breaks any foolish opponent's guard but knocks them a fair distance back.",
+
 
 	"key.category.epic_fight_battle_styles.efbs_skills": "Epic Fight Battle Styles",
 	"skill.epic_fight_battle_styles.test_combat_art": "Test Combat Art",
