--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -4,6 +4,9 @@
 	"item.epic_fight_battle_styles.origin_excalibur": "Origin Excalibur",
 	"item.epic_fight_battle_styles.origin_excalibur.tooltip": "This relic was once wielded by one of the 10 legendary heroes. It is said that all Excaliburs are based off this original template.",
 	"item.epic_fight_battle_styles.origin_arondight": "Origin Arondight",
+	"item.epic_fight_battle_styles.origin_joyeuse": "Origin Joyeuse",
+	"item.epic_fight_battle_styles.origin_joyeuse.tooltip": "Flames that should not be handled but only by a true wielder.\nAll human variants of Joyeuse are derived from this one, be it holy or demonic.\nAll said is nothing compared to the almighty Flare Blade.\n\nTemperatures can reach 10 to the power of 32 degrees Kelvin.",
+
 	"skill.epic_fight_battle_styles.hero": "Hero",
 	"skill.epic_fight_battle_styles.hero.tooltip": "The one with the sword and shield, increased attack speed with swords and axes. Reduced attack speed with everything else.",
 	"skill.epic_fight_battle_styles.imperatrice_lumiere": "Impératrice Lumiére",
@@ -21,8 +24,7 @@
 	"skill.epic_fight_battle_styles.blaze_stinger": "Blaze Stinger",
 	"skill.epic_fight_battle_styles.blaze_stinger.tooltip": "Thrust the sword at a speed so incredible not only it breaks any foolish opponent's guard but knocks them a fair distance back.",
 	"skill.epic_fight_battle_styles.trailblaze": "Trailblaze",
-	"skill.epic_fight_battle_styles.trailblaze.tooltip": "Dash a fair distance in any direction, primarily used to follow up on the mostly stationary comboes of Impératrice Lumiére",
-
+	"skill.epic_fight_battle_styles.trailblaze.tooltip": "Required Battle Style: Impératrice Lumiére\n\nDash a fair distance in any direction, primarily used to follow up on the mostly stationary comboes of Impératrice Lumiére",
 
 	"key.category.epic_fight_battle_styles.efbs_skills": "Epic Fight Battle Styles",
 	"skill.epic_fight_battle_styles.test_combat_art": "Test Combat Art",
