Port to 20.8.x versions.

--- a/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
+++ b/src/main/resources/assets/epic_fight_battle_styles/lang/en_us.json
@@ -38,6 +38,9 @@
 	"sounds.epic_fight_battle_styles.entity.weapon.imperatrice_hit_m": "Medium Blade Hit",
 	"sounds.epic_fight_battle_styles.entity.weapon.imperatrice_hit_l": "Heavy Blade Hit",
 	"sounds.epic_fight_battle_styles.entity.weapon.imperatrice_thrust_l": "Blade Impale",
+	"sounds.epic_fight_battle_styles.entity.weapon.imperatrice_kick_impact_m": "Medium Kick Impact",
+	"sounds.epic_fight_battle_styles.entity.weapon.imperatrice_punch_impact_m": "Medium Punch Impact",
+	"sounds.epic_fight_battle_styles.entity.combat.critical_hit": "Critical Hit",
 
 
 	"skill.epicfight.battle_style.category": "Battle Style",
